# system_prog_labs

./: .gitignore  README.md
lab1/: CMakeLists.txt  Makefile  lab1  main.c
lab2/: CMakeLists.txt
lab2/src/: CMakeLists.txt  main.c
lab3/: CMakeLists.txt
lab3/app/: CMakeLists.txt
lab3/include/: task1.h  task2.h
lab4/: CMakeLists.txt
lab4/app/: CMakeLists.txt  main.c
lab4/include/: tasks.h
lab4/src/: CMakeLists.txt  tasks.c
lab5/: CMakeLists.txt
lab5/app/: CMakeLists.txt  main.c
lab5/include/: tasks.h
lab5/src/: CMakeLists.txt  tasks.c
lab6/client/: CMakeLists.txt  main  main.c
lab6/server/: CMakeLists.txt  main.c
lab6/src/: CMakeLists.txt
lab7/: CMakeLists.txt  InitVision.md  devices.json
lab7/app/: main.c
lab7/data/: config.json  style.css
lab7/include/: model.h  view.h
lab7/src/: model.c  task1.c  view.c
lab8/: CMakeLists.txt
lab8/app/: CMakeLists.txt  main.c
lab8/include/: model.h  view.h  viewmodel.h
lab8/src/: CMakeLists.txt  model.c  task2.c  view.c  viewmodel.c
lab9/app/: main.c
